--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,8 +1,8 @@
 :root {
   --bg-color: #1E1E1E;
   --font-color: #fff;
+  --orange-color: #FB6542;
   --square-color: #888;
-  --elilipse-color: #FB6542;
   --rectangle-color: #fff;
   --burger-menu-color: #fff;
   --social-links-color: #fff;
