--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,11 @@ body {
   background-color: var(--bg-color);
 }
 
+.container {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .header {
   position: relative;
   z-index: 999;
@@ -26,6 +31,7 @@ body {
 
 .header__nav {
   display: flex;
+  z-index: 999;
   align-items: center;
   width: 100%;
   margin-left: 14px;
@@ -76,6 +82,7 @@ body {
   position: absolute;
   top: 16%;
   right: 24%;
+  z-index: 999;
   display: block;
   width: 10px;
   height: 10px;
@@ -146,7 +153,7 @@ body {
 
 .main__text > .main__text--title  {
   font-family: 'Gotham Pro Black';
-  font-size: 200px;
+  font-size: var(--font-size-title);
   line-height: 103%;
   letter-spacing: 4px;
 }
@@ -155,7 +162,7 @@ body {
   width: 76%;
   margin-left: 14px;
   font-family: 'Geometria Medium';
-  font-size: 48px;
+  font-size: var(--font-size-description);
   line-height: 137%;
   letter-spacing: 1px;
 }
@@ -220,6 +227,7 @@ body {
 }
 
 .footer__social-links > .footer__social-links--list {
+  z-index: 999;
   display: flex;
   list-style: none;
 }
