--- a/public/css/media.css
+++ b/public/css/media.css
@@ -50,7 +50,7 @@
   .main__clock {
     width: 320px;
     height: 320px;
-    margin-top: 0;
+    margin-top: 14%;
     margin-left: 0;
     background-size: 320px 320px;
   }
