--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  display: block;
+  display: none;
   width: 100vw;
   height: 100vh;
   background-color: var(--bg-color);
