--- a/public/css/media.css
+++ b/public/css/media.css
@@ -82,7 +82,7 @@
   .footer {
     grid-template-columns: 100%;
     justify-items: center;
-    margin-top: -30%;
+    margin-top: -36%;
   }
 
   .footer__ellipse {
@@ -331,10 +331,17 @@
 
 @media (min-width: 1280px) and (max-width: 1553px) {
   .header__right-menu {
-    width: 428px;
+    width: 75%;
+    margin-left: 130px;
+    background-size: 435px 435px;
   }
 
   .main__clock {
+    margin-left: 0;
+  }
+
+  .main__text {
+    width: 100%;
     margin-left: 0;
   }
 
@@ -362,10 +369,13 @@
 
 @media (min-width: 1554px) and (max-width: 1919px) {
   .header__right-menu {
-    width: 428px;
+    width: 75%;
+    margin-left: 130px;
+    background-size: 435px 435px;
   }
 
   .main__text {
+    width: 80%;
     margin-left: 20%;
   }
 
